Add resume section

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
         </nav>
         <h2>About</h2>
         <p>Hi, I'm Tim - a data scientist and developer based in Toronto. I have an interest in the software engineering principles around the development, deployment and monitoring of machine learning models. With the proper discipline, we can be agile and extract more value from our machine learning applications.</p>
+        <h2>Resume</h2>
         <p>My resume can be found <b><a href="resume.pdf">here</a></b>.</p>
     </main>
 </body>
