Remove out of date resume. Remove intro section

--- a/index.html
+++ b/index.html
@@ -1,77 +1,77 @@
 <!DOCTYPE html>
 <html>
-    <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Tim Thatcher - Machine Learning Developer</title>
-    <meta name="author" content="Tim Thatcher">
-    <meta name="description" content="Homepage of Tim Thatcher">
-    <meta name="keywords" content="data,machine learning,developer,tim,thatcher">
-    <style type="text/css">
-        html, body, main, nav, h1, h2, h3, ul, li {
-            margin: 0;
-            padding: 0;
-            font-size: 100%;
-            font-weight: inherit;
-        }
+  <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Tim Thatcher - Machine Learning Developer</title>
+  <meta name="author" content="Tim Thatcher">
+  <meta name="description" content="Homepage of Tim Thatcher">
+  <meta name="keywords" content="data,machine learning,developer,tim,thatcher">
+  <style type="text/css">
+    html, body, main, nav, h1, h2, h3, ul, li {
+      margin: 0;
+      padding: 0;
+      font-size: 100%;
+      font-weight: inherit;
+    }
 
-        html { font: 300 24px "Roboto", sans-serif; }
+    html { font: 300 24px "Roboto", sans-serif; }
 
-        main {
-            margin: 0 auto;
-            max-width: 35rem;
-        }
+    main {
+      margin: 0 auto;
+      max-width: 35rem;
+    }
 
-        main > * { margin: 0 0.5rem 0.5rem 0.5rem; }
+    main > * { margin: 0 0.5rem 0.5rem 0.5rem; }
 
-        main > :first-child { margin: 0.5rem; }
+    main > :first-child { margin: 0.5rem; }
 
-        header { text-align: center; }
+    header { text-align: center; }
 
-        header > * { margin: 0 0.5rem 0.5rem 0.5rem; }
+    header > * { margin: 0 0.5rem 0.5rem 0.5rem; }
 
-        h1 {
-            font-size: 2rem;
-            font-weight: 500;
-        }
+    h1 {
+        font-size: 2rem;
+        font-weight: 500;
+    }
 
-        h2 { font-size: 1.2rem; }
-        h3 { font-size: 1.1rem; }
+    h2 { font-size: 1.2rem; }
+    h3 { font-size: 1.1rem; }
 
-        ul {
-            list-style-type: none;
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: center;
-        }
+    ul {
+      list-style-type: none;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+    }
 
-        ul li {
-            margin: 1rem;
-        }
+    ul li {
+        margin: 1rem;
+    }
 
-        a {
-            text-decoration: none;
-            color: black;
-        }
+    a {
+        text-decoration: none;
+        color: black;
+    }
 
-        img.profile {
-            display: block;
-            padding: 0;
-            margin: 0.5rem auto;
-            border-radius: 50%;
-            border: none;
-            width: 256px;
-            height: 256px;
-        }
+    img.profile {
+      display: block;
+      padding: 0;
+      margin: 0.5rem auto;
+      border-radius: 50%;
+      border: none;
+      width: 256px;
+      height: 256px;
+    }
 
-        .icon {
-            display: inline-block;
-            width: 1.1rem;
-            height: 1.1rem;
-            vertical-align: middle;
-        }
+    .icon {
+      display: inline-block;
+      width: 1.1rem;
+      height: 1.1rem;
+      vertical-align: middle;
+    }
     </style>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,500&display=swap" rel="stylesheet">
 </head>
@@ -80,7 +80,7 @@
         <img class="profile" src="tim.png" />
         <header>
             <h1>Tim Thatcher</h1>
-            <h2>Data Scientist &amp; Developer</h2>
+            <h2>Machine Learning Developer</h2>
             <h3>Toronto, Canada</h3>
         </header>
         <nav>
@@ -99,10 +99,6 @@
                 </a></li>
             </ul>
         </nav>
-        <h2>About</h2>
-        <p>Hi, I'm Tim - a data scientist and developer based in Toronto. I have an interest in the software engineering principles around the development, deployment and monitoring of machine learning models.</p>
-        <h2>Resume</h2>
-        <p>My resume can be found <b><a href="resume.pdf">here</a></b>.</p>
     </main>
 </body>
 </html>
